--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="container mx-auto flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-6">
       <span class="font-semibold">Support me:</span>
       <a href="YOUR_AFFILIATE_LINK" target="_blank" class="transition transform hover:scale-105">
-        <img src="https://images-na.ssl-images-amazon.com/images/G/01/x-locale/common/images/amazon-logo.png" alt="Support me on Amazon" class="w-28 rounded" />
+        <img src="https://images-na.ssl-images-amazon.com/images/G/01/x-locale/common/images/amazon-logo.png"
+             alt="Support me on Amazon"
+             class="w-28 rounded" />
       </a>
       <!-- Custom Patreon Button -->
       <a href="https://patreon.com/user?u=102886" target="_blank"
@@ -29,56 +31,58 @@
   <main class="flex-1 container mx-auto px-4 py-8">
     <h1 class="text-4xl font-bold text-center mb-8 text-gray-900">Welcome to Dean's List</h1>
 
-    <!-- Inline Expanding Categories -->
-    <div class="space-y-8">
-      <!-- Category Container -->
-      <div class="category-container">
-        <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Opinion Pieces">
-          Opinion Pieces
-        </a>
-        <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-      </div>
+    <!-- Bubble Cloud Container -->
+    <div class="max-w-3xl mx-auto">
+      <!-- Create a grid or flex region for the floating bubbles -->
+      <div class="flex flex-wrap justify-center gap-4">
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Opinion Pieces">
+            Opinion Pieces
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
 
-      <div class="category-container">
-        <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Software">
-          Software
-        </a>
-        <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-      </div>
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Software">
+            Software
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
 
-      <div class="category-container">
-        <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Dr. Petter's Software">
-          Dr. Petter's Software
-        </a>
-        <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-      </div>
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Dr. Petter's Software">
+            Dr. Petter's Software
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
 
-      <div class="category-container">
-        <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Crypto">
-          Crypto
-        </a>
-        <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-      </div>
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Crypto">
+            Crypto
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
 
-      <div class="category-container">
-        <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Programming">
-          Programming
-        </a>
-        <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-      </div>
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Programming">
+            Programming
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
 
-      <div class="category-container">
-        <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Game Dev">
-          Game Dev
-        </a>
-        <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-      </div>
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Game Dev">
+            Game Dev
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
 
-      <div class="category-container">
-        <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Topics">
-          Topics
-        </a>
-        <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Topics">
+            Topics
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
       </div>
     </div>
   </main>
