--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <title>Dean's List</title>
   <!-- Include Tailwind CSS via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Optional custom styles -->
-  <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="flex flex-col min-h-screen bg-gray-50 text-gray-800">
   <!-- Header -->
@@ -29,52 +27,99 @@
     <!-- Bubble Cloud Container -->
     <div class="max-w-3xl mx-auto">
       <!-- Create a grid or flex region for the floating bubbles -->
-      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 justify-items-center">
+      <div class="flex flex-wrap justify-center gap-4">
+        <!-- Creative Chaos -->
         <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Opinion Pieces">
-            Opinion Pieces
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Creative Chaos">
+            Creative Chaos
           </a>
           <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
         </div>
 
+        <!-- Programming & Game Dev -->
         <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Software">
-            Software
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Programming & Game Dev">
+            Programming & Game Dev
           </a>
           <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
         </div>
 
+        <!-- Finance & Life Advice -->
         <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Dr. Petter's Software">
-            Dr. Petter's Software
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Finance & Life Advice">
+            Finance & Life Advice
           </a>
           <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
         </div>
 
+        <!-- Comedy & Trolls -->
         <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Crypto">
-            Crypto
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Comedy & Trolls">
+            Comedy & Trolls
           </a>
           <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
         </div>
 
+        <!-- Educational & Interesting -->
         <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Programming">
-            Programming
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Educational & Interesting">
+            Educational & Interesting
           </a>
           <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
         </div>
 
+        <!-- Gaming Legends -->
         <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Game Dev">
-            Game Dev
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Gaming Legends">
+            Gaming Legends
           </a>
           <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
         </div>
 
+        <!-- AI & Technology -->
         <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Topics">
-            Topics
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="AI & Technology">
+            AI & Technology
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
+
+        <!-- Don't Try This at Home -->
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Don't Try This at Home">
+            Don't Try This at Home
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
+
+        <!-- Gone but Not Forgotten -->
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Gone but Not Forgotten">
+            Gone but Not Forgotten
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
+
+        <!-- Wildlife & Nature -->
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Wildlife & Nature">
+            Wildlife & Nature
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
+
+        <!-- Brain Vacation -->
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Brain Vacation">
+            Brain Vacation
+          </a>
+          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+        </div>
+
+        <!-- Pictures on the Video Site -->
+        <div class="category-container w-full md:w-auto">
+          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Pictures on the Video Site">
+            Pictures on the Video Site
           </a>
           <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
         </div>
