--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Bubble Cloud Container -->
     <div class="max-w-3xl mx-auto">
       <!-- Create a grid or flex region for the floating bubbles -->
-      <div class="flex flex-wrap justify-center gap-4">
+      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 justify-items-center">
         <!-- Creative Chaos -->
         <div class="category-container w-full md:w-auto">
           <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Creative Chaos">
