--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dean's List - Tag System</title>
     <!-- Include Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -36,7 +33,16 @@
     <!-- Main Content -->
     <main class="container mx-auto p-4">
       <!-- Tag Filter Panel -->
-      <section id="tag-filters" class="flex flex-wrap gap-2 mb-8">
+      <section id="tag-filters" class="flex flex-wrap gap-2 mb-8 items-center">
+        <!-- Reset Button -->
+        <button
+          id="reset-filters"
+          class="bg-gray-300 hover:bg-gray-400 text-gray-800 px-2 py-2 rounded-full"
+          title="Reset Filters"
+        >
+          <i class="fas fa-redo"></i>
+        </button>
+        <!-- Tag buttons -->
         <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Creative Chaos">
           Creative Chaos
         </button>
