--- a/index.html
+++ b/index.html
@@ -63,9 +63,22 @@
           </a>
         </p>
       </div>
+
+      <!-- Empty space for Ko-Fi widget -->
+       <div class="h-20"></div>
+     
     </footer>
 
     <!-- Scripts -->
     <script src="script.js"></script>
+    <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+     <script>
+       kofiWidgetOverlay.draw("deanslist", {
+         type: "floating-chat",
+         "floating-chat.donateButton.text": "Support me",
+         "floating-chat.donateButton.background-color": "#00b9fe",
+         "floating-chat.donateButton.text-color": "#fff",
+       });
+     </script>
   </body>
 </html>
