--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <script src="script.js"></script>
     <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
      <script>
-       kofiWidgetOverlay.draw("deanslist", {
+       kofiWidgetOverlay.draw("suttonwilliamd", {
          type: "floating-chat",
          "floating-chat.donateButton.text": "Support me",
          "floating-chat.donateButton.background-color": "#00b9fe",
